finished building research api